# fastrpc

./: .gitignore  justfile  logconfig  pyproject.toml
__bak/_fastrpc/server/: exceptions.py  resolver.py
__bak/_fastrpc/tests/resolve/err/context/: tests.py
__bak/_fastrpc/tests/resolve/err/duplicated/: tests.py
__bak/_fastrpc/tests/resolve/ok/_1/: source.py
__bak/_fastrpc/utils/: constants.py
__bak/fastrpc/: __init__.py
_fastrpc/: __init__.py
_fastrpc/client/: __init__.py
_fastrpc/client/codegen/: __init__.py
_fastrpc/server/: __init__.py  asts.py  decorators.py  exceptions.py  resolver.py  types.py
_fastrpc/server/codegen/: __init__.py  client.py  server.py
_fastrpc/server/resolve/: __init__.py  mine.py
_fastrpc/server/utils/: log.py
_fastrpc/tests/: conftest.py
_fastrpc/tests/resolve/: conftest.py
_fastrpc/tests/resolve/err/context/simple/: __init__.py
_fastrpc/tests/resolve/err/duplicated/: tests.py
_fastrpc/tests/resolve/ok/: tests.py
_fastrpc/tests/resolve/ok/_1/: __init__.py
_fastrpc/tests/resolve/ok/_2/: source.py
_fastrpc/tests/server/: test_resolve.py
bak/_fastrpc/utils/: log.py
examples/: README.md
examples/client/: README.md
examples/tynacorp/: .bashrc  .dockerignore  .gitignore  .vimspector.json  Dockerfile  README.md  conftest.py  docker-compose.yml  logconfig  pyproject.toml  pytest.ini
examples/tynacorp/src/: main.py  settings.py  tests.py
examples/tynacorp/src/api/: __init__.py  router.py  types.py
examples/tynacorp/src/api/hello/: __init__.py  router.py  tests.py
examples/tynacorp/src/shared/: log.py  utils.py
fastrpc/: __init__.py
fastrpc/client/: __init__.py  _client.py
fastrpc/server/: __init__.py  ast.py  ast2.py  decorators.py  exceptions.py
tests/server/: test_create.py  test_resolve.py
tests/server/fixtures/err/_1/: __init__.py  source.py
tests/server/fixtures/err/_2/: __init__.py  source.py  sourceA.py
tests/server/fixtures/err/_3/: __init__.py
tests/server/fixtures/err/_4/: __init__.py  source.py
tests/server/fixtures/err/_5/: __init__.py  source.py
tests/server/fixtures/ok/_1/: __init__.py
tests/server/fixtures/ok/_2/: __init__.py
tests/server/fixtures/ok/_3/: __init__.py  source.py
(+73 files in other folders)
